fix(ci): creation des jar/war erronnés